enable clicking through toast modal

--- a/src/Toasty.scss
+++ b/src/Toasty.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   gap: 0.5rem;
   z-index: 99999;
+  pointer-events: none;
   &.left {
     align-items: flex-start;
   }
