--- a/src/Toasty.scss
+++ b/src/Toasty.scss
@@ -89,7 +89,6 @@
     }
   }
   .Toasty-message {
-    padding: 0.5rem 1rem;
     font-size: 1rem;
     display: flex;
     justify-content: center;
@@ -97,6 +96,15 @@
     gap: 0.5rem;
     > * {
       flex-shrink: 0;
+    }
+    &.small {
+      padding: 0.5rem 1rem;
+    }
+    &.regular {
+      padding: 0.75rem 1.25rem;
+    }
+    &.large {
+      padding: 0.1rem 1.5rem;
     }
   }
 }
