fix bug : outlined button had no background color

--- a/src/Toasty.scss
+++ b/src/Toasty.scss
@@ -47,6 +47,9 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   overflow: hidden;
   background-color: unset;
+  &.outlined {
+    background-color: white;
+  }
 
   &.success {
     color: var(--toasty-color-success);
